gccida/c3/check_asm_stack_operands
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/check_asm_stack_operands/src/reg-stack.c:1083:4: error: expected ';' after expression
rtx v21; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/check_asm_stack_operands/src/reg-stack.c:1083:5: error: use of undeclared identifier 'v21'
rtx v21; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/check_asm_stack_operands/src/reg-stack.c:1089:4: error: expected ';' after expression
rtx v27; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/check_asm_stack_operands/src/reg-stack.c:1089:5: error: use of undeclared identifier 'v27'
rtx v27; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/check_asm_stack_operands/src/reg-stack.c:1095:4: error: expected ';' after expression
rtx v33; // rsi 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/check_asm_stack_operands/src/reg-stack.c:1095:5: error: use of undeclared identifier 'v33'
rtx v33; // rsi 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/check_asm_stack_operands/src/reg-stack.c:1098:4: error: expected ';' after expression
rtx v37; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/check_asm_stack_operands/src/reg-stack.c:1098:5: error: use of undeclared identifier 'v37'
rtx v37; // rcx 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/check_asm_stack_operands/src/reg-stack.c:1113:6: error: use of undeclared identifier 'clobber_reg'
rtx *clobber_reg; // [rsp+A0h] [rbp-50h] 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/check_asm_stack_operands/src/reg-stack.c:1115:4: error: expected ';' after expression
rtx v55; // [rsp+B0h] [rbp-40h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/check_asm_stack_operands/src/reg-stack.c:1115:5: error: use of undeclared identifier 'v55'
rtx v55; // [rsp+B0h] [rbp-40h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/check_asm_stack_operands/src/reg-stack.c:1120:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v2 = ( unsigned __int16 *)insn[2]; 
                          ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/check_asm_stack_operands/src/reg-stack.c:1150:14: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
n_operands = recog_data_0.n_operands; 
             ^~~~~~~~~~~~
             recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/check_asm_stack_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/check_asm_stack_operands/src/reg-stack.c:1151:7: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v51 = recog_data_0.n_operands; 
      ^~~~~~~~~~~~
      recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/check_asm_stack_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/check_asm_stack_operands/src/reg-stack.c:1152:6: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( recog_data_0.n_operands > 0 ) 
     ^~~~~~~~~~~~
     recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/check_asm_stack_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/check_asm_stack_operands/src/reg-stack.c:1157:23: error: use of undeclared identifier 'recog_data_0'
v3.rtwint = ( __int64)recog_data_0.operand[v8]; 
                      ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/check_asm_stack_operands/src/reg-stack.c:1162:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[v8] = v3.rtx; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/check_asm_stack_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/check_asm_stack_operands/src/reg-stack.c:1177:1: error: use of undeclared identifier 'clobber_reg'
clobber_reg = ( rtx *)v3.rtwint; 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/check_asm_stack_operands/src/reg-stack.c:1177:22: error: expected expression
clobber_reg = ( rtx *)v3.rtwint; 
                     ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/check_asm_stack_operands/src/obj/reg-stack.o] Error 1
